--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
+<html>
+<head>
+<style type="text/css">
+a { text-decoration:none }
+</style>
+</head>
+  
+<body>
 <a href="https://www.naver.com/"><strong>네이버지롱</strong></a>
+<br />
+<a href="http://www.google.co.kr/"><strong>구글이지롱</strong></a>
+</body>
+</html>
+
