--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ a { text-decoration:none }
 <body>
 <a href="https://www.naver.com/"><strong>네이버지롱</strong></a>
 <br />
-<a href="http://www.google.co.kr/"><strong>구글이지롱</strong></a>
+<a href="https://www.google.co.kr/"><strong>구글이지롱</strong></a>
 </body>
 </html>
 
