--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@ a { text-decoration:none }
 </head>
   
 <body>
-<a href="https://www.naver.com/"><strong>네이버지롱</strong></a>
+<a href="https://www.naver.com/" target="_blank"><strong>네이버지롱</strong></a>
 <br />
-<a href="https://www.google.co.kr/"><strong>구글이지롱</strong></a>
+<a href="https://www.google.co.kr/" target="_blank"><strong>구글이지롱</strong></a>
 </body>
 </html>
 
