--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ setInterval(function(){
 </head>
   
 <body>
-  <div id="d-day"><strong></strong></div>      
+  <div><strong id="d-day"></strong></div>      
 <a href="https://www.naver.com/" target="_blank"><strong>네이버지롱</strong></a>
 <br />
 <a href="https://www.google.co.kr/" target="_blank"><strong>구글이지롱</strong></a>
