--- a/index.html
+++ b/index.html
@@ -24,11 +24,13 @@ setInterval(function(){
 </head>
   
 <body>
-  <div><strong id="d-day"></strong></div>      
-<a href="https://www.naver.com/" target="_blank"><strong>네이버지롱</strong></a>
-<br />
-<a href="https://www.google.co.kr/" target="_blank"><strong>구글이지롱</strong></a>
-  <div><img src="http://optimal.inven.co.kr/upload/2017/07/07/bbs/i13856861318.png" width="200" height="300"></div>
+  <div><strong id="d-day"></strong></div> 
+  <div>
+    <a href="https://www.naver.com/" target="_blank"><strong>네이버지롱</strong></a>
+    <br/>
+    <a href="https://www.google.co.kr/" target="_blank"><strong>구글이지롱</strong></a>
+  </div>
+  <div><img src="http://optimal.inven.co.kr/upload/2017/07/07/bbs/i13856861318.png" width="330" height="520"></div>
 </body>
 </html>
 
