--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ setInterval(function(){
     <br/>
     <a href="https://www.google.co.kr/" target="_blank"><strong>구글이지롱</strong></a>
   </div>
-  <div><img src="http://optimal.inven.co.kr/upload/2017/07/07/bbs/i13856861318.png" width="330" height="520"></div>
+  <div><img src="woo.jpg" width="330" height="520"></div>
 </body>
 </html>
 
