--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <style type="text/css">
 a { text-decoration:none }
 </style>
-<script type="text/javascript" src="dDay.js"></script>
+<script src="dDay.js"></script>
 </head>
   
 <body>
