--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ a { text-decoration:none }
   
 <body>
   <div><strong id="d-dayXmas"></strong></div> 
-  <div><strong id="d-dayTicket"></strong></div> 
+  <div><a href="http://www.ksug.org/seminar/2019/#price"><strong id="d-dayTicket"></strong></a></div>
   <div><img src="woo.jpg" width="330" height="520"></div>
 </body>
 </html>
