--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@ a { text-decoration:none }
 <body>
   <div><strong id="d-dayXmas"></strong></div> 
   <div><a href="http://www.ksug.org/seminar/2019/#price" target="_blank"><strong id="d-dayTicket"></strong></a></div>
+  <div><strong id="d-dayHome"></strong></div>
   <div></div>
   <div><img src="woo.jpg" width="330" height="520"></div>
 </body>
