--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ a { text-decoration:none }
   <div><strong id="d-dayXmas"></strong></div> 
   <div><a href="http://www.ksug.org/seminar/2019/#price" target="_blank"><strong id="d-dayTicket"></strong></a></div>
   <div><strong id="d-dayHome"></strong></div>
-  <div></div>
+  <div>13</div>
   <div><img src="woo.jpg" width="330" height="520"></div>
 </body>
 </html>
