--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ a { text-decoration:none }
 <body>
   <div><strong id="d-dayXmas"></strong></div>
   <div><a href="https://www.i-sh.co.kr/app/index.do" target="_blank"><strong id="d-dayHome"></strong></a></div>
-  <div> </div>
+  <div><strong id="d-dayTrans"></strong></div>
   <div><img src="woo.jpg" width="330" height="520"></div>
 </body>
 </html>
