--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <html>
 <head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
+  <title>간단한 지도 표시하기</title>
+  <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?clientId=YOUR_CLIENT_ID"></script>
 <style type="text/css">
 a { text-decoration:none }
 </style>
@@ -11,6 +16,15 @@ a { text-decoration:none }
   <div><a href="https://www.i-sh.co.kr/app/index.do" target="_blank"><strong id="d-dayHome"></strong></a></div>
   <div><strong id="d-dayTrans"></strong></div>
   <div><img src="woo.jpg" width="330" height="520"></div>
+  
+  <div id="map" style="width:100%;height:400px;"></div>
+  <script>
+  var mapOptions = {
+      center: new naver.maps.LatLng(37.3595704, 127.105399),
+      zoom: 10
+  };
+  var map = new naver.maps.Map('map', mapOptions);
+  </script>    
 </body>
 </html>
 
