--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@ a { text-decoration:none }
   
 <body>
   <div><strong id="d-dayTrans"></strong></div>
-  <div><img src="woo.jpg" width="330" height="520"></div>    
-  <div><img src="choo.PNG" width="330" height="520"></div>
+  <div><img src="woo.jpg" width="330" height="520">
+       <img src="choo.PNG" width="330" height="520">
+  </div>    
 </body>
 </html>
 
